# ros2_test_ws

src/basic_cpp/: CMakeLists.txt  package.xml  tcp_spi_exchange3.cpp
src/basic_cpp/src/: basic.cpp  spi_test.cpp  talk_to_arduino.cpp  tcp_client.cpp  tcp_serial_exchange.cpp  tcp_server.cpp  tcp_spi_exchange.cpp  tcp_spi_exchange1.cpp  tcp_spi_exchange2.cpp  tcp_spi_exchange3.cpp  tcp_spi_exchange4.cpp
src/dummy/scripts/: spiTrial01.py  spiTrial02.py  spiTrial03.py
